--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -14,25 +14,25 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build --emptyOutDir",
+    "build": "tsc --noEmit && vite build --emptyOutDir",
     "dev": "vite build --watch"
   },
   "dependencies": {
     "n8ao": "^1.6.8"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "^0.13.0",
-    "@types/three": "~0.153.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "~5.1.6",
-    "vite": "^4.4.7",
-    "vite-plugin-dts": "^3.3.1",
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "@thyseus/transformer-rollup": "^0.13.0",
+    "@types/three": "~0.153.0",
     "postprocessing": "^6.32.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "three": "~0.153.0",
-    "thyseus": "^0.13.5"
+    "thyseus": "^0.13.5",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.7",
+    "vite-plugin-dts": "^3.3.1"
   },
   "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
