--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -111,15 +111,18 @@
     "@lattice-engine/vrm": "workspace:^"
   },
   "devDependencies": {
+    "postprocessing": "^6.32.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "~5.1.6",
+    "three": "~0.153.0",
+    "thyseus": "^0.14.0-beta.9",
+    "typescript": "~5.2.2",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
   },
   "peerDependencies": {
-    "postprocessing": "^6.32.2",
-    "three": "~0.153.0",
-    "thyseus": "^0.14.0-beta.5"
+    "postprocessing": "*",
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
